// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createJestOverride allows passing extra extends 1`] = `
Object {
  "env": Object {
    "jest": true,
  },
  "extends": Array [
    "foo",
  ],
  "files": Array [
    "**/*.?(test|spec).?(ts|js)?(x)",
  ],
  "parserOptions": Object {
    "ecmaVersion": 2020,
  },
  "plugins": Array [
    "jest",
    "testing-library",
  ],
  "rules": Object {
    "import/no-namespace": "off",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-if": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-jest-import": "error",
    "jest/no-large-snapshots": Array [
      "warn",
      Object {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be-null": "warn",
    "jest/prefer-to-be-undefined": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "error",
    "jest/valid-describe": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "no-empty-function": "off",
    "testing-library/await-async-query": "error",
    "testing-library/await-async-utils": "error",
    "testing-library/await-fire-event": "error",
    "testing-library/consistent-data-testid": "off",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-debug": "error",
    "testing-library/no-dom-import": "off",
    "testing-library/no-manual-cleanup": "error",
    "testing-library/no-render-in-setup": "off",
    "testing-library/no-wait-for-empty-callback": "error",
    "testing-library/prefer-explicit-assert": "warn",
    "testing-library/prefer-find-by": "warn",
    "testing-library/prefer-presence-queries": "error",
    "testing-library/prefer-screen-queries": "error",
    "testing-library/prefer-wait-for": "warn",
  },
  "settings": Object {
    "jest": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createJestOverride allows passing extra rules 1`] = `
Object {
  "env": Object {
    "jest": true,
  },
  "extends": Array [
    "plugin:jest-formatting/strict",
  ],
  "files": Array [
    "**/*.?(test|spec).?(ts|js)?(x)",
  ],
  "parserOptions": Object {
    "ecmaVersion": 2020,
  },
  "plugins": Array [
    "jest",
    "testing-library",
  ],
  "rules": Object {
    "import/no-namespace": "off",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-if": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-jest-import": "error",
    "jest/no-large-snapshots": Array [
      "warn",
      Object {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be-null": "warn",
    "jest/prefer-to-be-undefined": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "error",
    "jest/valid-describe": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "no-empty-function": "off",
    "testing-library/await-async-query": "error",
    "testing-library/await-async-utils": "error",
    "testing-library/await-fire-event": "error",
    "testing-library/consistent-data-testid": "off",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-debug": "error",
    "testing-library/no-dom-import": "off",
    "testing-library/no-manual-cleanup": "off",
    "testing-library/no-render-in-setup": "off",
    "testing-library/no-wait-for-empty-callback": "error",
    "testing-library/prefer-explicit-assert": "warn",
    "testing-library/prefer-find-by": "warn",
    "testing-library/prefer-presence-queries": "error",
    "testing-library/prefer-screen-queries": "error",
    "testing-library/prefer-wait-for": "warn",
  },
  "settings": Object {
    "jest": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createJestOverride matches snapshot with jest & jest-dom & react 1`] = `
Object {
  "env": Object {
    "jest": true,
  },
  "extends": Array [
    "plugin:jest-formatting/strict",
  ],
  "files": Array [
    "**/*.?(test|spec).?(ts|js)?(x)",
  ],
  "parserOptions": Object {
    "ecmaVersion": 2020,
  },
  "plugins": Array [
    "jest",
    "jest-dom",
  ],
  "rules": Object {
    "import/no-namespace": "off",
    "jest-dom/prefer-checked": "warn",
    "jest-dom/prefer-empty": "warn",
    "jest-dom/prefer-enabled-disabled": "warn",
    "jest-dom/prefer-focus": "warn",
    "jest-dom/prefer-required": "warn",
    "jest-dom/prefer-to-have-attribute": "warn",
    "jest-dom/prefer-to-have-style": "warn",
    "jest-dom/prefer-to-have-text-content": "warn",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-if": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-jest-import": "error",
    "jest/no-large-snapshots": Array [
      "warn",
      Object {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be-null": "warn",
    "jest/prefer-to-be-undefined": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "error",
    "jest/valid-describe": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "no-empty-function": "off",
  },
  "settings": Object {
    "jest": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createJestOverride matches snapshot with jest & jest-dom & testing-lib & react & ts 1`] = `
Object {
  "env": Object {
    "jest": true,
  },
  "extends": Array [
    "plugin:jest-formatting/strict",
  ],
  "files": Array [
    "**/*.?(test|spec).?(ts|js)?(x)",
  ],
  "parserOptions": Object {
    "ecmaVersion": 2020,
  },
  "plugins": Array [
    "jest",
    "jest-dom",
    "testing-library",
  ],
  "rules": Object {
    "@typescript-eslint/explicit-member-accessibility": "off",
    "@typescript-eslint/no-empty-function": "off",
    "@typescript-eslint/no-non-null-assertion": "off",
    "@typescript-eslint/unbound-method": "off",
    "import/no-namespace": "off",
    "jest-dom/prefer-checked": "warn",
    "jest-dom/prefer-empty": "warn",
    "jest-dom/prefer-enabled-disabled": "warn",
    "jest-dom/prefer-focus": "warn",
    "jest-dom/prefer-required": "warn",
    "jest-dom/prefer-to-have-attribute": "warn",
    "jest-dom/prefer-to-have-style": "warn",
    "jest-dom/prefer-to-have-text-content": "warn",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-if": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-jest-import": "error",
    "jest/no-large-snapshots": Array [
      "warn",
      Object {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be-null": "warn",
    "jest/prefer-to-be-undefined": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "error",
    "jest/valid-describe": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "no-empty-function": "off",
    "testing-library/await-async-query": "error",
    "testing-library/await-async-utils": "error",
    "testing-library/await-fire-event": "error",
    "testing-library/consistent-data-testid": "off",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-debug": "error",
    "testing-library/no-dom-import": Array [
      "warn",
      "react",
    ],
    "testing-library/no-manual-cleanup": "error",
    "testing-library/no-render-in-setup": "off",
    "testing-library/no-wait-for-empty-callback": "error",
    "testing-library/prefer-explicit-assert": "warn",
    "testing-library/prefer-find-by": "warn",
    "testing-library/prefer-presence-queries": "error",
    "testing-library/prefer-screen-queries": "error",
    "testing-library/prefer-wait-for": "warn",
  },
  "settings": Object {
    "jest": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createJestOverride matches snapshot with jest & jest-dom & testing-lib & react 1`] = `
Object {
  "env": Object {
    "jest": true,
  },
  "extends": Array [
    "plugin:jest-formatting/strict",
  ],
  "files": Array [
    "**/*.?(test|spec).?(ts|js)?(x)",
  ],
  "parserOptions": Object {
    "ecmaVersion": 2020,
  },
  "plugins": Array [
    "jest",
    "jest-dom",
    "testing-library",
  ],
  "rules": Object {
    "import/no-namespace": "off",
    "jest-dom/prefer-checked": "warn",
    "jest-dom/prefer-empty": "warn",
    "jest-dom/prefer-enabled-disabled": "warn",
    "jest-dom/prefer-focus": "warn",
    "jest-dom/prefer-required": "warn",
    "jest-dom/prefer-to-have-attribute": "warn",
    "jest-dom/prefer-to-have-style": "warn",
    "jest-dom/prefer-to-have-text-content": "warn",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-if": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-jest-import": "error",
    "jest/no-large-snapshots": Array [
      "warn",
      Object {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be-null": "warn",
    "jest/prefer-to-be-undefined": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "error",
    "jest/valid-describe": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "no-empty-function": "off",
    "testing-library/await-async-query": "error",
    "testing-library/await-async-utils": "error",
    "testing-library/await-fire-event": "error",
    "testing-library/consistent-data-testid": "off",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-debug": "error",
    "testing-library/no-dom-import": Array [
      "warn",
      "react",
    ],
    "testing-library/no-manual-cleanup": "error",
    "testing-library/no-render-in-setup": "off",
    "testing-library/no-wait-for-empty-callback": "error",
    "testing-library/prefer-explicit-assert": "warn",
    "testing-library/prefer-find-by": "warn",
    "testing-library/prefer-presence-queries": "error",
    "testing-library/prefer-screen-queries": "error",
    "testing-library/prefer-wait-for": "warn",
  },
  "settings": Object {
    "jest": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createJestOverride matches snapshot with jest & jest-dom & testing-lib & ts 1`] = `
Object {
  "env": Object {
    "jest": true,
  },
  "extends": Array [
    "plugin:jest-formatting/strict",
  ],
  "files": Array [
    "**/*.?(test|spec).?(ts|js)?(x)",
  ],
  "parserOptions": Object {
    "ecmaVersion": 2020,
  },
  "plugins": Array [
    "jest",
    "jest-dom",
    "testing-library",
  ],
  "rules": Object {
    "@typescript-eslint/explicit-member-accessibility": "off",
    "@typescript-eslint/no-empty-function": "off",
    "@typescript-eslint/no-non-null-assertion": "off",
    "@typescript-eslint/unbound-method": "off",
    "import/no-namespace": "off",
    "jest-dom/prefer-checked": "warn",
    "jest-dom/prefer-empty": "warn",
    "jest-dom/prefer-enabled-disabled": "warn",
    "jest-dom/prefer-focus": "warn",
    "jest-dom/prefer-required": "warn",
    "jest-dom/prefer-to-have-attribute": "warn",
    "jest-dom/prefer-to-have-style": "warn",
    "jest-dom/prefer-to-have-text-content": "warn",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-if": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-jest-import": "error",
    "jest/no-large-snapshots": Array [
      "warn",
      Object {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be-null": "warn",
    "jest/prefer-to-be-undefined": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "error",
    "jest/valid-describe": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "no-empty-function": "off",
    "testing-library/await-async-query": "error",
    "testing-library/await-async-utils": "error",
    "testing-library/await-fire-event": "error",
    "testing-library/consistent-data-testid": "off",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-debug": "error",
    "testing-library/no-dom-import": "off",
    "testing-library/no-manual-cleanup": "error",
    "testing-library/no-render-in-setup": "off",
    "testing-library/no-wait-for-empty-callback": "error",
    "testing-library/prefer-explicit-assert": "warn",
    "testing-library/prefer-find-by": "warn",
    "testing-library/prefer-presence-queries": "error",
    "testing-library/prefer-screen-queries": "error",
    "testing-library/prefer-wait-for": "warn",
  },
  "settings": Object {
    "jest": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createJestOverride matches snapshot with jest & jest-dom & testing-lib 1`] = `
Object {
  "env": Object {
    "jest": true,
  },
  "extends": Array [
    "plugin:jest-formatting/strict",
  ],
  "files": Array [
    "**/*.?(test|spec).?(ts|js)?(x)",
  ],
  "parserOptions": Object {
    "ecmaVersion": 2020,
  },
  "plugins": Array [
    "jest",
    "jest-dom",
    "testing-library",
  ],
  "rules": Object {
    "import/no-namespace": "off",
    "jest-dom/prefer-checked": "warn",
    "jest-dom/prefer-empty": "warn",
    "jest-dom/prefer-enabled-disabled": "warn",
    "jest-dom/prefer-focus": "warn",
    "jest-dom/prefer-required": "warn",
    "jest-dom/prefer-to-have-attribute": "warn",
    "jest-dom/prefer-to-have-style": "warn",
    "jest-dom/prefer-to-have-text-content": "warn",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-if": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-jest-import": "error",
    "jest/no-large-snapshots": Array [
      "warn",
      Object {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be-null": "warn",
    "jest/prefer-to-be-undefined": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "error",
    "jest/valid-describe": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "no-empty-function": "off",
    "testing-library/await-async-query": "error",
    "testing-library/await-async-utils": "error",
    "testing-library/await-fire-event": "error",
    "testing-library/consistent-data-testid": "off",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-debug": "error",
    "testing-library/no-dom-import": "off",
    "testing-library/no-manual-cleanup": "error",
    "testing-library/no-render-in-setup": "off",
    "testing-library/no-wait-for-empty-callback": "error",
    "testing-library/prefer-explicit-assert": "warn",
    "testing-library/prefer-find-by": "warn",
    "testing-library/prefer-presence-queries": "error",
    "testing-library/prefer-screen-queries": "error",
    "testing-library/prefer-wait-for": "warn",
  },
  "settings": Object {
    "jest": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createJestOverride matches snapshot with jest & jest-dom & ts 1`] = `
Object {
  "env": Object {
    "jest": true,
  },
  "extends": Array [
    "plugin:jest-formatting/strict",
  ],
  "files": Array [
    "**/*.?(test|spec).?(ts|js)?(x)",
  ],
  "parserOptions": Object {
    "ecmaVersion": 2020,
  },
  "plugins": Array [
    "jest",
    "jest-dom",
  ],
  "rules": Object {
    "@typescript-eslint/explicit-member-accessibility": "off",
    "@typescript-eslint/no-empty-function": "off",
    "@typescript-eslint/no-non-null-assertion": "off",
    "@typescript-eslint/unbound-method": "off",
    "import/no-namespace": "off",
    "jest-dom/prefer-checked": "warn",
    "jest-dom/prefer-empty": "warn",
    "jest-dom/prefer-enabled-disabled": "warn",
    "jest-dom/prefer-focus": "warn",
    "jest-dom/prefer-required": "warn",
    "jest-dom/prefer-to-have-attribute": "warn",
    "jest-dom/prefer-to-have-style": "warn",
    "jest-dom/prefer-to-have-text-content": "warn",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-if": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-jest-import": "error",
    "jest/no-large-snapshots": Array [
      "warn",
      Object {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be-null": "warn",
    "jest/prefer-to-be-undefined": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "error",
    "jest/valid-describe": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "no-empty-function": "off",
  },
  "settings": Object {
    "jest": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createJestOverride matches snapshot with jest & jest-dom 1`] = `
Object {
  "env": Object {
    "jest": true,
  },
  "extends": Array [
    "plugin:jest-formatting/strict",
  ],
  "files": Array [
    "**/*.?(test|spec).?(ts|js)?(x)",
  ],
  "parserOptions": Object {
    "ecmaVersion": 2020,
  },
  "plugins": Array [
    "jest",
    "jest-dom",
  ],
  "rules": Object {
    "import/no-namespace": "off",
    "jest-dom/prefer-checked": "warn",
    "jest-dom/prefer-empty": "warn",
    "jest-dom/prefer-enabled-disabled": "warn",
    "jest-dom/prefer-focus": "warn",
    "jest-dom/prefer-required": "warn",
    "jest-dom/prefer-to-have-attribute": "warn",
    "jest-dom/prefer-to-have-style": "warn",
    "jest-dom/prefer-to-have-text-content": "warn",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-if": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-jest-import": "error",
    "jest/no-large-snapshots": Array [
      "warn",
      Object {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be-null": "warn",
    "jest/prefer-to-be-undefined": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "error",
    "jest/valid-describe": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "no-empty-function": "off",
  },
  "settings": Object {
    "jest": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createJestOverride matches snapshot with jest & react 1`] = `
Object {
  "env": Object {
    "jest": true,
  },
  "extends": Array [
    "plugin:jest-formatting/strict",
  ],
  "files": Array [
    "**/*.?(test|spec).?(ts|js)?(x)",
  ],
  "parserOptions": Object {
    "ecmaVersion": 2020,
  },
  "plugins": Array [
    "jest",
  ],
  "rules": Object {
    "import/no-namespace": "off",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-if": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-jest-import": "error",
    "jest/no-large-snapshots": Array [
      "warn",
      Object {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be-null": "warn",
    "jest/prefer-to-be-undefined": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "error",
    "jest/valid-describe": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "no-empty-function": "off",
  },
  "settings": Object {
    "jest": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createJestOverride matches snapshot with jest & testing-lib 1`] = `
Object {
  "env": Object {
    "jest": true,
  },
  "extends": Array [
    "plugin:jest-formatting/strict",
  ],
  "files": Array [
    "**/*.?(test|spec).?(ts|js)?(x)",
  ],
  "parserOptions": Object {
    "ecmaVersion": 2020,
  },
  "plugins": Array [
    "jest",
    "testing-library",
  ],
  "rules": Object {
    "import/no-namespace": "off",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-if": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-jest-import": "error",
    "jest/no-large-snapshots": Array [
      "warn",
      Object {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be-null": "warn",
    "jest/prefer-to-be-undefined": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "error",
    "jest/valid-describe": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "no-empty-function": "off",
    "testing-library/await-async-query": "error",
    "testing-library/await-async-utils": "error",
    "testing-library/await-fire-event": "error",
    "testing-library/consistent-data-testid": "off",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-debug": "error",
    "testing-library/no-dom-import": "off",
    "testing-library/no-manual-cleanup": "error",
    "testing-library/no-render-in-setup": "off",
    "testing-library/no-wait-for-empty-callback": "error",
    "testing-library/prefer-explicit-assert": "warn",
    "testing-library/prefer-find-by": "warn",
    "testing-library/prefer-presence-queries": "error",
    "testing-library/prefer-screen-queries": "error",
    "testing-library/prefer-wait-for": "warn",
  },
  "settings": Object {
    "jest": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createJestOverride matches snapshot with jest & ts 1`] = `
Object {
  "env": Object {
    "jest": true,
  },
  "extends": Array [
    "plugin:jest-formatting/strict",
  ],
  "files": Array [
    "**/*.?(test|spec).?(ts|js)?(x)",
  ],
  "parserOptions": Object {
    "ecmaVersion": 2020,
  },
  "plugins": Array [
    "jest",
  ],
  "rules": Object {
    "@typescript-eslint/explicit-member-accessibility": "off",
    "@typescript-eslint/no-empty-function": "off",
    "@typescript-eslint/no-non-null-assertion": "off",
    "@typescript-eslint/unbound-method": "off",
    "import/no-namespace": "off",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-if": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-jest-import": "error",
    "jest/no-large-snapshots": Array [
      "warn",
      Object {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be-null": "warn",
    "jest/prefer-to-be-undefined": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "error",
    "jest/valid-describe": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "no-empty-function": "off",
  },
  "settings": Object {
    "jest": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createJestOverride matches snapshot with jest 1`] = `
Object {
  "env": Object {
    "jest": true,
  },
  "extends": Array [
    "plugin:jest-formatting/strict",
  ],
  "files": Array [
    "**/*.?(test|spec).?(ts|js)?(x)",
  ],
  "parserOptions": Object {
    "ecmaVersion": 2020,
  },
  "plugins": Array [
    "jest",
  ],
  "rules": Object {
    "import/no-namespace": "off",
    "jest/consistent-test-it": "off",
    "jest/expect-expect": "off",
    "jest/lowercase-name": "off",
    "jest/no-alias-methods": "off",
    "jest/no-commented-out-tests": "warn",
    "jest/no-conditional-expect": "error",
    "jest/no-deprecated-functions": "error",
    "jest/no-disabled-tests": "warn",
    "jest/no-done-callback": "error",
    "jest/no-duplicate-hooks": "warn",
    "jest/no-expect-resolves": "off",
    "jest/no-export": "error",
    "jest/no-focused-tests": "error",
    "jest/no-hooks": "off",
    "jest/no-identical-title": "error",
    "jest/no-if": "error",
    "jest/no-interpolation-in-snapshots": "error",
    "jest/no-jasmine-globals": "error",
    "jest/no-jest-import": "error",
    "jest/no-large-snapshots": Array [
      "warn",
      Object {
        "maxSize": 300,
      },
    ],
    "jest/no-mocks-import": "error",
    "jest/no-restricted-matchers": "off",
    "jest/no-standalone-expect": "off",
    "jest/no-test-prefixes": "error",
    "jest/no-test-return-statement": "error",
    "jest/no-truthy-falsy": "off",
    "jest/no-try-expect": "off",
    "jest/prefer-called-with": "error",
    "jest/prefer-expect-assertions": "off",
    "jest/prefer-hooks-on-top": "error",
    "jest/prefer-inline-snapshots": "off",
    "jest/prefer-spy-on": "warn",
    "jest/prefer-strict-equal": "warn",
    "jest/prefer-to-be-null": "warn",
    "jest/prefer-to-be-undefined": "warn",
    "jest/prefer-to-contain": "warn",
    "jest/prefer-to-have-length": "warn",
    "jest/prefer-todo": "warn",
    "jest/require-to-throw-message": "off",
    "jest/require-top-level-describe": "error",
    "jest/valid-describe": "error",
    "jest/valid-expect": "error",
    "jest/valid-expect-in-promise": "error",
    "jest/valid-title": "warn",
    "no-empty-function": "off",
  },
  "settings": Object {
    "jest": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createJestOverride matches snapshot without jest 1`] = `null`;
